fix duplicate properties